[workspace]
resolver = "2"
members = ["smart_wallet_factory","tyfi_dao",
    "typhoon_resilience_vault",
]

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.test]
debug = 0
strip = "debuginfo"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
