[package]
name = "tyfi_dao"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "27.0.0-rc.1"

[dev-dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
