[package]
name = "typhoon_resilience_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "=20.5.0"

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"] }
derive_arbitrary = "=1.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
